# pyqt5_qt5_designer

./: LICENSE.txt  README.md  pyproject.toml
pyqt5-designer-mini/: README.md  pyproject.toml
pyqt5-designer-mini/src/pyqt5_designer_mini/: designer_runner.py
src/pyqt5_designer_mini/: __about__.py
src/pyqt5_qt5_designer/: __about__.py  __init__.py  designer_runner.py
