[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyqt5_qt5_designer"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Selmen Arous", email = "selmen.arous@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pyqt5"
]

[project.gui-scripts]
pyqt5_qt5_designer = "pyqt5_qt5_designer.designer_runner:main_function"

[project.urls]
Documentation = "https://github.com/selmen2004/pyqt5_qt5_designer#readme"
Issues = "https://github.com/selmen2004/pyqt5_qt5_designer/issues"
Source = "https://github.com/selmen2004/pyqt5_qt5_designer"

[tool.hatch.version]
path = "src/pyqt5_qt5_designer/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
  
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pyqt5_qt5_designer tests}"

[tool.coverage.run]
source_pkgs = ["pyqt5_qt5_designer", "tests"]
branch = true
parallel = true
omit = [
  "src/pyqt5_qt5_designer/__about__.py",
]

[tool.coverage.paths]
pyqt5_qt5_designer = ["src/pyqt5_qt5_designer", "*src/pyqt5_qt5_designer"]
tests = ["tests", "*/pyqt5_qt5_designer/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.hatch.build.targets.wheel]
include = [
          "src/*"
]
packages = [
  "src/pyqt5_qt5_designer",
  "src/PyQt5"
  ]
#[tool.hatch.build.targets.wheel.sources]
#"bin" = "../PyQt5/Qt5/bin"
